# logical_expression_evaluation

./: .gitignore  CMakeLists.txt  CmakeLists.txt  input.txt  main.cpp  output.txt
node/: CMakeLists.txt  node.cpp  node.h
node/tests/: CMakeLists.txt  logical_node_tests.cpp
parser/: CMakeLists.txt  parser.cpp  parser.h
parser/tests/: parser_tests.cpp
syntax_analyzer/: CMakeLists.txt  syntax_analyzer.cpp  syntax_analyzer.h
syntax_analyzer/tests/: syntax_analyzer_tests.cpp
tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.h
tokenizer/tests/: CMakeLists.txt  tokenizer_test.cpp
